--- a/src/small.css
+++ b/src/small.css
@@ -1,18 +1,37 @@
 @media screen and (max-width: 359px) {
-    .cards-list {
-        overflow-x: scroll;
+
+    .header-categories > * {
+        padding: 8px 35px;
+        border-radius: 8px;
     }
 
-    .card {
-        flex: 0 0 auto;
-        width: 50%;
+    .cards-list {
+        /* overflow-x: scroll; */
+        flex-wrap: wrap;
     }
-    .card > img{
+
+    .custom-card {
+        flex: 0 0 auto;
+        width: 100%;
+    }
+    .custom-card > img{
         height: 250px;
-        object-fit: cover;
+        /* object-fit: cover; */
+    }
+    .custom-card-content {
+        text-align: center;
+        font-size: 16px;
+        padding-top: 5px;
     }
 
     .credit > * {
         display: block;
+    }
+
+    .modal-title {
+        font-weight: 600;
+        font-size: 18px;
+        letter-spacing: -0.02em;
+        color: #EBEEF5;
     }
 }
