--- a/src/styles.css
+++ b/src/styles.css
@@ -116,6 +116,7 @@ nav {
 .header-categories > * {
     padding: 8px 45px;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 /* cards component */
@@ -133,6 +134,7 @@ nav {
     padding: 8px 8px 16px;
     display: flex;          
     flex-direction: column; 
+    cursor: pointer;
     /* margin-bottom: 20px; */
 }
 
