--- a/src/iframe.css
+++ b/src/iframe.css
@@ -4,14 +4,9 @@
   max-width: 600px;
   margin: auto;
   padding: 20px;
-  background: #f9f9f9;
+  background: red;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-iframe {
-  height: 550px;
-  width: 550px;
 }
 
 /* Style for sections */
