--- a/src/iframe.css
+++ b/src/iframe.css
@@ -4,7 +4,7 @@
   max-width: 600px;
   margin: auto;
   padding: 20px;
-  background: red;
+  background: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -85,3 +85,17 @@ input[readonly] {
 .section + .section {
   margin-top: 30px;
 }
+
+button {
+        padding: 10px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        font-size: 16px;
+        cursor: pointer;
+      }
+
+      button:hover {
+        background-color: #0056b3;
+      }
